    remote add, followed by git-annex sync. Now the remote is automatically
    initialized for use by git-annex, where before the git-annex branch had
    to manually be pushed before using git-annex sync. Note that this
    involved changes to git-annex-shell, so if the remote is using an old
    version, the manual push is still needed.

 -- Joey Hess <id@joeyh.name>  Fri, 31 Jul 2015 12:31:39 -0400

git-annex (5.20150731) unstable; urgency=medium

  * webapp: Support enabling known gitlab.com remotes.
  * Fix rsync special remote to work when -Jn is used for concurrent
    uploads.
  * The last release accidentially removed a number of options from the
    copy command. (-J, file matching options, etc). These have been added
    back.
  * init: Detect when the filesystem is crippled such that it ignores
    attempts to remove the write bit from a file, and enable direct mode.
    Seen with eg, NTFS fuse on linux.
  * Fix man page installation by cabal install; all the new man pages are
    now installed.

 -- Joey Hess <id@joeyh.name>  Fri, 31 Jul 2015 11:34:36 -0400

git-annex (5.20150727) unstable; urgency=medium

  * Fix bug that prevented uploads to remotes using new-style chunking
    from resuming after the last successfully uploaded chunk.
  * Switched option parsing to use optparse-applicative. This was a very large
    and invasive change, and may have caused some minor behavior changes to
    edge cases of option parsing. (For example, the metadata command no
    longer accepts the combination of --get and --set, which never actually
    worked.)
  * Bash completion file is now included in the git-annex source tree, 
    and installed into Debian package (and any other packages built using make
    install). This bash completion is generated by the option parser, so it
    covers all commands, all options, and will never go out of date!
  * As well as tab completing "git-annex" commands, "git annex" will also tab